# technical-blog

./: .gitignore  .pre-commit-config.yaml  README.md  TRANSLATION.md  mkdocs.yml  noxfile.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements-dev.txt  template_filters.py
.github/workflows/: gh-pages.yml
content/ca/: benvinguda.md
content/ca/blog/: benvinguda.md  deute-tecnic-complexitat.md  era-pogramari-personal.md  paga-el-deute-tecnic-ia.md
content/en/: benvinguda.md
content/extra/: llms.txt  robots.txt
docs/: index.md
docs/ca/: benvinguda.md  index.md
docs/en/: benvinguda.md  index.md
markdown_extensions/: __init__.py  internal_links.py  youtube_embed.py
output/: archives.html  authors.html  benvinguda-en.html  categories.html  index.html  tags.html
output/author/: carles-julia.html  technical-blog-author.html
output/category/: blog.html  ca.html  en.html
output/tag/: devto.html  escriptura.html  meta.html  writing.html
output_test/: archives.html  authors.html  benvinguda-en.html  categories.html  index.html  tags.html
output_test/author/: carles-julia.html
output_test/category/: ca.html
output_test/feeds/: all-ca.atom.xml  all-en.atom.xml  all.atom.xml  ca.atom.xml  carles-julia.atom.xml  carles-julia.rss.xml
output_test/tag/: devto.html  escriptura.html  meta.html
scripts/: export_devto.py  export_llm_md.py  new_article.py  prepare_translation.py  render_docs.py
templates/: article_ca.md  article_en.md
theme_overrides/: analytics.html  article.html  article_infos.html  base.html  index.html
(+9 files in other folders)
