[project]
name = "technical-blog"
version = "0.1.0"
description = "Technical blog"
dependencies = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]
requires-python = ">=3.13"


[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.mdformat]
number = true
wrap = 88
end-of-line = "lf"

[dependency-groups]
dev = [
    "mdformat>=0.7",
    "mdformat-frontmatter>=0.4",
    "mdformat-gfm>=0.3",
    "nox>=2024.3",
    "pre-commit>=3.7",
    "ruff>=0.4",
]
